--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .idea/
+./cli-desktop/bin/*.exe
+
+./server/bin/*.exe
